--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ transformers==4.55.2
 sentencepiece==0.2.1
 sacremoses==0.1.1
 python-dateutil==2.9.0.post0
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+pydantic==2.11.7
