--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ python-multipart==0.0.20
 spacy==3.8.7
 aiosmtplib==4.0.2
 bcrypt==5.0.0
+feedgen==1.0.0
+redis==7.0.1
 pytest==8.3.4
 pytest-asyncio==0.25.1
 slowapi==0.1.9
