fix(): updated Redis client configuration, fixes for public RSS-feeds

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 # Redis configuration for caching and task queues
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_USERNAME=default
 REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
 
