feat(): more flexible configuration for AI-models and data deduplication

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,10 @@ TRANSLATION_CLEANUP_INTERVAL=1800
 TRANSLATION_DEVICE=cpu
 TRANSLATION_MAX_WORKERS=4
 
+# Translation models
+TRANSLATION_MODEL=facebook/m2m100_418M
+TRANSLATION_ENABLED=true
+
 # Cache services
 CACHE_DEFAULT_TTL=3600
 CACHE_MAX_SIZE=10000
@@ -68,3 +72,15 @@ CACHE_CLEANUP_INTERVAL=300
 QUEUE_MAX_SIZE=30
 QUEUE_DEFAULT_WORKERS=1
 QUEUE_TASK_TIMEOUT=300
+
+# Deduplication services
+DUPLICATE_DETECTOR_ENABLED=true
+
+# Embedding models
+EMBEDDING_SENTENCE_TRANSFORMER_MODEL=paraphrase-multilingual-MiniLM-L12-v2
+
+# spaCy models
+SPACY_EN_MODEL=en_core_web_sm
+SPACY_RU_MODEL=ru_core_news_sm
+SPACY_DE_MODEL=de_core_news_sm
+SPACY_FR_MODEL=fr_core_news_sm
