--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,18 @@ WEBHOOK_URL=https://yourdomain.com/webhook
 # Telegram Bot Token (get from @BotFather)
 BOT_TOKEN=your_telegram_bot_token
 
+# Telegram bot channel IDs
+CHANNEL_ID_RU=-1002584789230
+CHANNEL_ID_DE=-1002959373215
+CHANNEL_ID_FR=-1002910849909
+CHANNEL_ID_EN=-1003035894895
+
+# Telegram bot channel categories
+CHANNEL_CATEGORIES=world,technology,lifestyle,politics,economy,autos,sports
+
+# TTL for cleaning expired user data (24 hours)
+USER_DATA_TTL_SECONDS=86400
+
 # JWT configuration for API authentication
 JWT_SECRET_KEY=your_jwt_secret_key
 JWT_ALGORITHM=HS256
@@ -43,6 +55,9 @@ API_KEY_SALT=change_in_production
 SITE_API_KEY=your_site_api_key
 BOT_API_KEY=your_bot_api_key
 
+# Telegram bot API configuration
+API_BASE_URL=http://127.0.0.1:8000/api/v1
+
 # Service configuration
 # RSS services
 RSS_MAX_CONCURRENT_FEEDS=10
@@ -51,6 +66,19 @@ RSS_VALIDATION_CACHE_TTL=300
 RSS_REQUEST_TIMEOUT=15
 RSS_MAX_TOTAL_ITEMS=1000
 RSS_PARSER_MEDIA_TYPE_PRIORITY=image
+
+# Default User-Agent for HTTP requests
+# Using Chrome-like User-Agent to avoid blocking while remaining minimally identifiable
+DEFAULT_USER_AGENT = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36 FireFeed/1.0"
+
+# Absolute path to images directory on server
+IMAGES_ROOT_DIR=/var/www/firefeed/data/www/firefeed.net/data/images/
+# Absolute path to videos directory on server
+VIDEOS_ROOT_DIR=/var/www/firefeed/data/www/firefeed.net/data/videos/
+# Absolute path to videos directory on website
+HTTP_VIDEOS_ROOT_DIR=https://firefeed.net/data/videos/
+# Absolute path to images directory on website
+HTTP_IMAGES_ROOT_DIR=https://firefeed.net/data/images/
 
 # Translation services
 TRANSLATION_MAX_CONCURRENT=3
