--- a/.env.example
+++ b/.env.example
@@ -29,14 +29,11 @@ WEBHOOK_URL=https://yourdomain.com/webhook
 # Telegram Bot Token (get from @BotFather)
 BOT_TOKEN=your_telegram_bot_token
 
-# Telegram bot channel IDs
-CHANNEL_ID_RU=-1000000000000
-CHANNEL_ID_DE=-1000000000001
-CHANNEL_ID_FR=-1000000000002
-CHANNEL_ID_EN=-1000000000003
+# Dictionary of channel IDs for different languages
+CHANNEL_IDS={"ru": "-1002584789230", "de": "-1002959373215", "fr": "-1002910849909", "en": "-1003035894895"}
 
 # Telegram bot channel categories
-CHANNEL_CATEGORIES=world,technology,lifestyle,politics,economy,autos,sports
+CHANNEL_CATEGORIES=["world", "technology", "lifestyle", "politics", "economy", "autos", "sports"]
 
 # TTL for cleaning expired user data (24 hours)
 USER_DATA_TTL_SECONDS=86400
@@ -91,6 +88,7 @@ QUEUE_TASK_TIMEOUT=300
 
 # Deduplication services
 DUPLICATE_DETECTOR_ENABLED=true
+RSS_ITEM_SIMILARITY_THRESHOLD=0.9
 
 # Embedding models
 EMBEDDING_SENTENCE_TRANSFORMER_MODEL=paraphrase-multilingual-MiniLM-L12-v2
