--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,10 @@ RSS_REQUEST_TIMEOUT=15
 RSS_MAX_TOTAL_ITEMS=1000
 RSS_PARSER_MEDIA_TYPE_PRIORITY=image
 
+# RSS parser content filtering
+RSS_PARSER_MIN_ITEM_TITLE_WORDS_LENGTH=0
+RSS_PARSER_MIN_ITEM_CONTENT_WORDS_LENGTH=0
+
 # Default User-Agent for HTTP requests
 # Using Chrome-like User-Agent to avoid blocking while remaining minimally identifiable
 DEFAULT_USER_AGENT = "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36 FireFeed/1.0"
