feat(): added RSS_PARSER_CLEANUP_INTERVAL_HOURS support, upd SPACY_MODELS env, updated README, added PROJECT_STRUCTURE.md

--- a/.env.example
+++ b/.env.example
@@ -97,8 +97,11 @@ RSS_ITEM_SIMILARITY_THRESHOLD=0.9
 # Embedding models
 EMBEDDING_SENTENCE_TRANSFORMER_MODEL=paraphrase-multilingual-MiniLM-L12-v2
 
-# spaCy models
-SPACY_EN_MODEL=en_core_web_sm
-SPACY_RU_MODEL=ru_core_news_sm
-SPACY_DE_MODEL=de_core_news_sm
-SPACY_FR_MODEL=fr_core_news_sm
+# RSS Parser cleanup interval in hours - controls how long news items, translations,
+# telegram publications and associated media files are kept
+# Set to 0 to disable automatic cleanup (data stored indefinitely) - default: 0
+# Set to positive number (e.g., 24) to enable cleanup after specified hours
+RSS_PARSER_CLEANUP_INTERVAL_HOURS=0
+
+# spaCy models - unified configuration
+SPACY_MODELS={"en": "en_core_web_sm", "ru": "ru_core_news_sm", "de": "de_core_news_sm", "fr": "fr_core_news_sm"}
