--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot[job-queue]==22.3
-python-telegram-bot[webhooks]==22.3
+python-telegram-bot[job-queue,webhooks]==22.5
 feedparser==6.0.11
 tenacity==9.1.2
 pytz==2025.2
