--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main", "master", "develop" ]
+    tags:
+      - 'v*'
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main", "master", "develop" ]
 
 permissions:
   contents: read
@@ -86,3 +88,51 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ./Dockerfile
+
+  deploy:
+    name: Deploy (rsync over SSH)
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Install rsync and ssh-client
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y --no-install-recommends rsync openssh-client
+
+      - name: Setup SSH agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: |
+            ${{ secrets.DEPLOY_SSH_KEY }}
+
+      - name: Add server to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.DEPLOY_SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Rsync project files to remote
+        env:
+          RSYNC_RSH: "ssh -o StrictHostKeyChecking=yes -l ${{ secrets.DEPLOY_SSH_USER }}"
+        run: |
+          rsync -az --delete \
+            --exclude ".git" \
+            --exclude ".github" \
+            --exclude "__pycache__" \
+            --exclude ".venv" \
+            --exclude "*.pyc" \
+            --exclude ".DS_Store" \
+            ./ ${{ secrets.DEPLOY_SSH_HOST }}:${{ secrets.DEPLOY_PATH }}/
+
+      - name: Post-deploy commands on remote host
+        env:
+          PY_BIN: ${{ secrets.PYTHON_BIN }}
+          POST_CMD: ${{ secrets.OPTIONAL_POST_DEPLOY_CMD }}
+        run: |
+          ssh -o StrictHostKeyChecking=yes ${{ secrets.DEPLOY_SSH_USER }}@${{ secrets.DEPLOY_SSH_HOST }} "cd ${{ secrets.DEPLOY_PATH }} && \
+            if [ -n \"$POST_CMD\" ]; then eval \"$POST_CMD\"; else \
+              echo 'No post-deploy commands configured'; fi"
