--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,20 +104,18 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y --no-install-recommends rsync openssh-client
 
-      - name: Setup SSH agent
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: |
-            ${{ secrets.DEPLOY_SSH_KEY }}
-
       - name: Add server to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.DEPLOY_SSH_HOST }} >> ~/.ssh/known_hosts
 
+      - name: Write SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa_ci
+          chmod 600 ~/.ssh/id_rsa_ci
+
       - name: Rsync project files to remote
-        env:
-          RSYNC_RSH: "ssh -o StrictHostKeyChecking=yes -l ${{ secrets.DEPLOY_SSH_USER }}"
         run: |
           rsync -az --delete \
             --exclude ".git" \
@@ -126,13 +124,14 @@ jobs:
             --exclude ".venv" \
             --exclude "*.pyc" \
             --exclude ".DS_Store" \
-            ./ ${{ secrets.DEPLOY_SSH_HOST }}:${{ secrets.DEPLOY_PATH }}/
+            -e "ssh -vvv -i $HOME/.ssh/id_rsa_ci -o StrictHostKeyChecking=yes -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IdentitiesOnly=yes" \
+            ./ ${{ secrets.DEPLOY_SSH_USER }}@${{ secrets.DEPLOY_SSH_HOST }}:${{ secrets.DEPLOY_PATH }}/
 
       - name: Post-deploy commands on remote host
         env:
           PY_BIN: ${{ secrets.PYTHON_BIN }}
           POST_CMD: ${{ secrets.OPTIONAL_POST_DEPLOY_CMD }}
         run: |
-          ssh -o StrictHostKeyChecking=yes ${{ secrets.DEPLOY_SSH_USER }}@${{ secrets.DEPLOY_SSH_HOST }} "cd ${{ secrets.DEPLOY_PATH }} && \
-            if [ -n \"$POST_CMD\" ]; then eval \"$POST_CMD\"; else \
-              echo 'No post-deploy commands configured'; fi"
+          ssh -vvv -i $HOME/.ssh/id_rsa_ci -o StrictHostKeyChecking=yes -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IdentitiesOnly=yes \
+            ${{ secrets.DEPLOY_SSH_USER }}@${{ secrets.DEPLOY_SSH_HOST }} \
+            "cd ${{ secrets.DEPLOY_PATH }} && if [ -n '$POST_CMD' ]; then eval '$POST_CMD'; else echo 'No post-deploy commands configured'; fi"
