--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,4 +134,4 @@ jobs:
         run: |
           ssh -vvv -i $HOME/.ssh/id_rsa_ci -o StrictHostKeyChecking=yes -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IdentitiesOnly=yes \
             ${{ secrets.DEPLOY_SSH_USER }}@${{ secrets.DEPLOY_SSH_HOST }} \
-            "cd ${{ secrets.DEPLOY_PATH }} && if [ -n '$POST_CMD' ]; then eval '$POST_CMD'; else echo 'No post-deploy commands configured'; fi"
+            "cd ${{ secrets.DEPLOY_PATH }} && if [ -n \"$POST_CMD\" ]; then bash -lc \"$POST_CMD\"; else echo 'No post-deploy commands configured'; fi"
