--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,6 @@ DB_PORT=5432
 DB_MINSIZE=5
 DB_MAXSIZE=20
 
-# Telegram bot API configuration
-API_BASE_URL=http://127.0.0.1:8000/api/v1
-
 # SMTP configuration for email notifications
 SMTP_SERVER=smtp.yourdomain.com
 SMTP_PORT=465
@@ -20,23 +17,6 @@ SMTP_EMAIL=your_email@yourdomain.com
 SMTP_PASSWORD=your_smtp_password
 SMTP_USE_TLS=True
 
-# Webhook configuration for Telegram bot
-WEBHOOK_LISTEN=127.0.0.1
-WEBHOOK_PORT=5000
-WEBHOOK_URL_PATH=webhook
-WEBHOOK_URL=https://yourdomain.com/webhook
-
-# Telegram Bot Token (get from @BotFather)
-BOT_TOKEN=your_telegram_bot_token
-
-# Dictionary of channel IDs for different languages
-CHANNEL_IDS={"ru": "-1002584789230", "de": "-1002959373215", "fr": "-1002910849909", "en": "-1003035894895"}
-
-# Telegram bot channel categories
-CHANNEL_CATEGORIES=["world", "technology", "lifestyle", "politics", "economy", "autos", "sports"]
-
-# TTL for cleaning expired user data (24 hours)
-USER_DATA_TTL_SECONDS=86400
 
 # JWT configuration for API authentication
 JWT_SECRET_KEY=your_jwt_secret_key
@@ -105,3 +85,10 @@ RSS_PARSER_CLEANUP_INTERVAL_HOURS=0
 
 # spaCy models - unified configuration
 SPACY_MODELS={"en": "en_core_web_sm", "ru": "ru_core_news_sm", "de": "de_core_news_sm", "fr": "fr_core_news_sm"}
+
+# API Key configuration
+API_KEY_SALT=salt_hash
+
+# Shared API access keys
+SITE_API_KEY=some_api_key1
+BOT_API_KEY=some_api_key2
